OAP-129 SSO: ref token validation
